# Embedded-Unit-Testing-Extension-for-VSCode

./: CHANGELOG.md  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
src/: ConstraintContainer.ts  checkPreconditions.ts  componentViewTree.ts  extension.ts  extensionStateMachine.ts  modelConstraint.ts  modelHandler.ts  projectGenerator.ts  unitViewTree.ts
templates/project_template/: codechecker.cfg  meson.build  meson_options.txt
templates/project_template/integration/: cross_compile.build  meson.build
templates/project_template/scripts/: UnitTestSupport.py  flash_binary.py
templates/unit_template/: meson.build
templates/unit_template/Unit/include/: unit_template.h
templates/unit_template/Unit/src/: unit_template.c
templates/unit_template/UnitTest/include/: userstub.h
templates/unit_template/UnitTest/src/: TStemplate.c  TestSuites.c  userstub.c
